fix part of the unit tests, need add more